--- a/ConsoleApp1/ConsoleAppClient.csproj
+++ b/ConsoleApp1/ConsoleAppClient.csproj
@@ -7,7 +7,11 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
-  <ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Microsoft.Extensions.Logging.Console" Version="7.0.0" />
+	</ItemGroup>
+
+	<ItemGroup>
     <ProjectReference Include="..\ClassLibrary1\ClassLibrary1.csproj" />
     <ProjectReference Include="..\SignalClassLibrary\SignalClassLibrary.csproj" />
   </ItemGroup>
