--- a/ConsoleApp2/ConsoleApp.csproj
+++ b/ConsoleApp2/ConsoleApp.csproj
@@ -8,6 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="7.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\ClassLibrary1\ClassLibrary1.csproj" />
     <ProjectReference Include="..\SignalClassLibrary\SignalClassLibrary.csproj" />
   </ItemGroup>
