--- a/Notification.NotificationServer/Notification.NotificationServer.csproj
+++ b/Notification.NotificationServer/Notification.NotificationServer.csproj
@@ -7,11 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="RabbitMQ.Client" Version="6.5.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\TPT.Notification.NotifierLibrary\TPT.Notification.NotifierLibrary.csproj" />
+    <ProjectReference Include="..\Notification.NotifierLibrary\Notification.NotifierLibrary.csproj" />
   </ItemGroup>
 
 </Project>
