--- a/Notification.NotificationServer/Notification.NotificationServer.csproj
+++ b/Notification.NotificationServer/Notification.NotificationServer.csproj
@@ -12,7 +12,13 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Notification.Backplane\Notification.NotificationServer.Backplane.csproj" />
+    <ProjectReference Include="..\Notification.NotificationServer.RabbitMqBackplane\Notification.NotificationServer.RabbitMqBackplane.csproj" />
     <ProjectReference Include="..\Notification.NotifierLibrary\Notification.NotifierLibrary.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Models\" />
   </ItemGroup>
 
 </Project>
