--- a/Notification.NotificationServer/appsettings.json
+++ b/Notification.NotificationServer/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "RabbitMqBackplane": {
+    "Host": "localhost",
+    "Username": "laptop",
+    "Password": "laptop",
+    "ExchangeName": "Notifications"
+  }
 }
