--- a/Notification.NotificationServer.RabbitMqBackplane/Notification.NotificationServer.RabbitMqBackplane.csproj
+++ b/Notification.NotificationServer.RabbitMqBackplane/Notification.NotificationServer.RabbitMqBackplane.csproj
@@ -18,7 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Notification.Backplane\Notification.NotificationServer.Backplane.csproj" />
+    <ProjectReference Include="..\Notification.NotificationServer.Backplane\Notification.NotificationServer.Backplane.csproj" />
   </ItemGroup>
 
 </Project>
