--- a/Notification.NotificationServer/Notification.NotificationServer.csproj
+++ b/Notification.NotificationServer/Notification.NotificationServer.csproj
@@ -4,17 +4,22 @@
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>492bef48-5ea6-4ba9-82be-a076c566d5aa</UserSecretsId>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+	<Version Condition="'$(BUILD_BUILDNUMBER)' != ''">$(BUILD_BUILDNUMBER)</Version>
+	<Version Condition="'$(BUILD_BUILDNUMBER)' == ''">1.0.0.1</Version>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="7.0.1" />
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.17.0" />
     <PackageReference Include="RabbitMQ.Client" Version="6.5.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Notification.Backplane\Notification.NotificationServer.Backplane.csproj" />
+    <ProjectReference Include="..\Notification.NotificationServer.Backplane.RabbitMq\Notification.NotificationServer.Backplane.RabbitMq.csproj" />
     <ProjectReference Include="..\Notification.NotificationServer.Backplane\Notification.NotificationServer.Backplane.csproj" />
-    <ProjectReference Include="..\Notification.NotificationServer.RabbitMqBackplane\Notification.NotificationServer.RabbitMqBackplane.csproj" />
     <ProjectReference Include="..\Notification.NotifierLibrary\Notification.NotifierLibrary.csproj" />
   </ItemGroup>
 
