--- a/Tests/ConsoleApp2/ConsoleApp.csproj
+++ b/Tests/ConsoleApp2/ConsoleApp.csproj
@@ -13,7 +13,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\ClassLibrary1\ClassLibrary1.csproj" />
-    <ProjectReference Include="..\Notification.NotifierLibrary\Notification.NotifierLibrary.csproj" />
+    <ProjectReference Include="..\..\Notification.NotifierLibrary\Notification.NotifierLibrary.csproj" />
   </ItemGroup>
 
 </Project>
