--- a/Tests/ConsoleApp4/ConsoleApp4.csproj
+++ b/Tests/ConsoleApp4/ConsoleApp4.csproj
@@ -12,8 +12,8 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<ProjectReference Include="..\..\Notification.NotifierLibrary\Notification.NotifierLibrary.csproj" />
 		<ProjectReference Include="..\ClassLibrary1\ClassLibrary1.csproj" />
-		<ProjectReference Include="..\Notification.NotifierLibrary\Notification.NotifierLibrary.csproj" />
 	</ItemGroup>
 
 </Project>
